// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should prioritize disabled over error styles 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-3"
  disabled=""
  for="input_10"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      aria-invalid="true"
      class="circuit-1"
      disabled=""
      id="input_10"
    />
  </div>
</label>
`;

exports[`TextArea should prioritize disabled over warning styles 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-3"
  disabled=""
  for="input_11"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      disabled=""
      id="input_11"
    />
  </div>
</label>
`;

exports[`TextArea should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-4 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-4:not(label),
label + .circuit-4:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-4"
  for="input_4"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_4"
    />
  </div>
  <span
    class="circuit-3"
  >
    Validation hint
  </span>
</label>
`;

exports[`TextArea should render with a prefix when passed the prefix prop 1`] = `
.circuit-4 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-4:not(label),
label + .circuit-4:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-3 {
  position: relative;
}

.circuit-1 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-2::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-2:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-2:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-4"
  for="input_2"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-3"
  >
    <div
      class="circuit-1"
      style="width: 24px; height: 24px;"
    />
    <textarea
      class="circuit-2"
      id="input_2"
    />
  </div>
</label>
`;

exports[`TextArea should render with a suffix when passed the suffix prop 1`] = `
.circuit-4 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-4:not(label),
label + .circuit-4:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-3 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<label
  class="circuit-4"
  for="input_3"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-3"
  >
    <textarea
      class="circuit-1"
      id="input_3"
    />
    <div
      class="circuit-2"
      style="width: 24px; height: 24px;"
    />
  </div>
</label>
`;

exports[`TextArea should render with default styles 1`] = `
.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-3"
  for="input_1"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_1"
    />
  </div>
</label>
`;

exports[`TextArea should render with disabled styled when passed the disabled prop 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-3"
  disabled=""
  for="input_9"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      disabled=""
      id="input_9"
    />
  </div>
</label>
`;

exports[`TextArea should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="input_12"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_12"
    />
  </div>
</label>
`;

exports[`TextArea should render with invalid styles when passed the invalid prop 1`] = `
.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #D23F47;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:not(:focus)::-webkit-input-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-1:not(:focus)::-moz-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-1:not(:focus):-ms-input-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-1:not(:focus)::placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<label
  class="circuit-3"
  for="input_6"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      aria-invalid="true"
      class="circuit-1"
      id="input_6"
    />
  </div>
</label>
`;

exports[`TextArea should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="input_13"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_13"
    />
  </div>
</label>
`;

exports[`TextArea should render with readonly styles when passed the readonly prop 1`] = `
.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-3"
  for="input_8"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_8"
      readonly=""
    />
  </div>
</label>
`;

exports[`TextArea should render with valid styles when passed the showValid prop 1`] = `
.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-3"
  for="input_7"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_7"
    />
  </div>
</label>
`;

exports[`TextArea should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-3 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-3:not(label),
label + .circuit-3:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #F5C625;
  overflow: auto;
  resize: vertical;
}

.circuit-1::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:not(:focus)::-webkit-input-placeholder {
  color: #F5C625;
}

.circuit-1:not(:focus)::-moz-placeholder {
  color: #F5C625;
}

.circuit-1:not(:focus):-ms-input-placeholder {
  color: #F5C625;
}

.circuit-1:not(:focus)::placeholder {
  color: #F5C625;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #F5C625;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #F5C625;
}

<label
  class="circuit-3"
  for="input_5"
>
  <span
    class="circuit-0"
  />
  <div
    class="circuit-2"
  >
    <textarea
      class="circuit-1"
      id="input_5"
    />
  </div>
</label>
`;
